--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ h1 {
   left: 3%;
   z-index: 1;
   border-radius: 3px;
-  width: 150px;
+  width: 170px;
   border: 1px solid rgba(0, 0, 0, 0.4);
   height: 200px;
 }
@@ -41,6 +41,28 @@ h1 {
   border-bottom: 1px solid rgba(0, 0, 0, 0.25);
   text-align: center;
 }
+
+.menu-ui a .baja {
+  width: 50px;
+  height: 50px;
+  background-color: rgb(49, 209, 49);
+  color: rgb(49, 209, 49);
+}
+
+.menu-ui a .media {
+  width: 50px;
+  height: 50px;
+  background-color: rgb(199, 136, 19);
+  color: rgb(199, 136, 19);
+}
+
+.menu-ui a .alta {
+  width: 50px;
+  height: 50px;
+  background-color: rgb(255, 0, 0);
+  color: rgb(255, 0, 0);
+}
+
 .menu-ui a:first-child {
   border-radius: 3px 3px 0 0;
 }
@@ -59,3 +81,8 @@ h1 {
   font-weight: bolder;
 }
 
+.menu-ui .baja {
+  width: 10px;
+  height: 10px;
+  background-color: green;
+}
